--- a/ui/web/src/index.html
+++ b/ui/web/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>轻量级～开放平台及内部服务管理 - shan.liu@msn.com</title>
+    <title>轻量级～开放平台及内部应用管理系统 - shan.liu@msn.com</title>
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <%for (let i=0;i<js.length;i++){ %>
         <%='<script src="'+js[i]+'" crossorigin="anonymous">' %>
