--- a/server/examples/lsys-actix-web/static/404.html
+++ b/server/examples/lsys-actix-web/static/404.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <a href="/static/welcome.html">back to home</a>
+  <a href="/welcome.html">back to home</a>
   <h1>404</h1>
 </body>
 
