新增单条[短信，邮件]发送，同步等待结果

--- a/server/examples/lsys-actix-web/static/404.html
+++ b/server/examples/lsys-actix-web/static/404.html
@@ -3,11 +3,10 @@
 
 <head>
   <title>actix - basics</title>
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon" />
 </head>
 
 <body>
-  <a href="/welcome.html">back to home</a>
+  <a href="/static/welcome.html">back to home</a>
   <h1>404</h1>
 </body>
 
