--- a/server/examples/lsys-actix-web/static/welcome.html
+++ b/server/examples/lsys-actix-web/static/welcome.html
@@ -3,11 +3,11 @@
 
 <head>
   <title>actix - basics</title>
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon" />
 </head>
 
 <body>
-  <h1>Welcome <img width="30px" height="30px" src="/logo.png" /></h1>
+  <h1>Welcome <img width="30px" height="30px" src="/static/logo.png" /></h1>
+  <a href="/dome">actix-web-dome-page</a>
 </body>
 
 </html>
